ada controller dan view

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#tentuin port aplikasi
+server.port = 8080
 
+#definisikan database
+spring.datasource.url=jdbc:postgresql://localhost:5432/cookmamaorder
+spring.datasource.username=postgres
+spring.datasource.password=Katasandi@2019
